--- a/components/header.html
+++ b/components/header.html
@@ -3,8 +3,8 @@
 <p id=""></p>
 
 <ul id="navigation-links">
-    <li><a class="navigation-link" href="/index.html">Home</a></li>
-    <li><a class="navigation-link" href="/about.html">Sobre nós</a></li>
-    <li><a class="navigation-link" href="/products.html">Produtos</a></li>
-    <li><a class="navigation-link" href="/contact.html">Contato</a></li>
+    <li><a class="navigation-link" href="/pages/index.html">Home</a></li>
+    <li><a class="navigation-link" href="/pages/about.html">Quem Somos</a></li>
+    <li><a class="navigation-link" href="/pages/products.html">Produtos</a></li>
+    <li><a class="navigation-link" href="/pages/contact.html">Contato</a></li>
 </ul>
