--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,5 @@
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css);
+
 :root {
     --color-primary: #ffffff;
     --color-secondary: #451f0f;
