Adicionado nova rede social (Facebook).

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,6 +1,12 @@
 <ul id="social-links">
     <li>
-        <a class="social-link" href="https://www.instagram.com/granjaserradourada/" target="_blank">
+        <a class="social-link" href="https://www.facebook.com/granjaserradourada/" target="_blank">
+            <img src="/assets/icons/facebook.png" loading="lazy" alt="Facebook" class="social-icon">
+        </a>
+    </li>
+
+    <li>
+        <a class="social-link" href="https://www.instagram.com/gserradourada/" target="_blank">
             <img src="/assets/icons/instagram.png" loading="lazy" alt="Instagram" class="social-icon">
         </a>
     </li>
