--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
 
 <ul id="navigation-links">
     <li><a class="navigation-link" href="/index.html">Home</a></li>
-    <li><a class="navigation-link" href="/about.html">Sobre nós</a></li>
+    <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
     <li><a class="navigation-link" href="/products.html">Produtos</a></li>
     <li><a class="navigation-link" href="/contact.html">Contato</a></li>
 </ul>
