Icons brancos para melhor contraste, link do whatsapp próprio para a media do usuário

--- a/components/footer.html
+++ b/components/footer.html
@@ -17,15 +17,15 @@
         </a>
     </li>
 
-    <li>
+    <li id="whatsapp-mobile">
         <a class="social-link" href="https://wa.me/69999090548" target="_blank">
             <img src="/assets/icons/whatsapp.png" loading="lazy" alt="Whatsapp" class="social-icon">
         </a>
     </li>
 
-    <li>
+    <li id="whatsapp-web">
         <a class="social-link" href="https://web.whatsapp.com/send?phone=69999090548" target="_blank">
-            <img src="/assets/icons/whatsapp web.png" loading="lazy" alt="Whatsapp" class="social-icon">
+            <img src="/assets/icons/whatsapp.png" loading="lazy" alt="Whatsapp" class="social-icon">
         </a>
     </li>
 </ul>
