--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -21,9 +21,27 @@
 
 .social-icon {
     width: 32px;
+    border: none;
+    transition: 0.3s ease;
+}
+
+.social-icon:hover {
+    scale: 1.2;
 }
 
 #copyright {
     margin-top: 10px;
     color: var(--color-secondary);
+}
+
+@media only screen and (min-width: 361px) { 
+    #whatsapp-mobile {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 360px) { 
+    #whatsapp-web {
+        display: none;
+    }
 }
