Personalização do logo

--- a/components/header.html
+++ b/components/header.html
@@ -1,4 +1,6 @@
-<img id="logo" src="/assets/images/logo_rounded.png" alt="Logo - Granja Serra Dourada">
+<a href="https://maps.app.goo.gl/4zbQPdQ6HJqZ1Huh8" target="_blank">
+    <img id="logo" src="/assets/images/logo_rounded.png" alt="Logo - Granja Serra Dourada">
+</a>
 
 <p id=""></p>
 
