--- a/css/components/header.css
+++ b/css/components/header.css
@@ -17,6 +17,13 @@
 
 #logo {
     width: 80px;
+    border-radius: 50%;
+    transition: 0.3s ease;
+}
+
+#logo:hover {
+    scale: 1.1;
+    box-shadow: var(--box-shadow-light);
 }
 
 #navigation-links {
