--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,3 @@
-@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css);
-
 :root {
     --color-primary: #ffffff;
     --color-secondary: #451f0f;
@@ -12,7 +10,7 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     width: 100%;
 
     margin: 0;
