--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,12 @@
 @import url(/css/base.css);
+
+main {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#banner {
+    width: 100%;
+}
