--- a/css/components/product.css
+++ b/css/components/product.css
@@ -2,38 +2,29 @@
 
 .flex-container {
     display: flex;
-    flex-direction: inherit;
+    flex-direction:inherit;
+    justify-content: center;
 }
 
 .flex-container>div {
-    background-color: #ffffff;
+    background-color: #f9c987;
     border: #000000;
-    border-radius: 50px;
-    margin: 10px;
+    border-radius: 20px;
     padding: 20px;
     width: 500px;
     font-size: 30px;
+    margin: 30PX;
 }
 
-.product-name {
-    background-color: #f9c987d2;
-}
-
-.produtos p{
-    font-size: 20px;
-    text-align: center;
+.produto{
+    background-color: #00000041;
+    margin-bottom: 0px;
+    width: 100%;
+    height: 100px;
     border-radius: 20px;
-    height: 50px;
-    margin: 10px;
 }
 
 .image {
     width: 90%;
     border-radius: 20%;
 }
-
-.titulo {
-    text-align: center;
-}
-
-
