--- a/css/components/product.css
+++ b/css/components/product.css
@@ -1,30 +1,44 @@
 @import url('../base.css');
 
+h1{
+    text-align: center;
+    font-family:'Times New Roman', Times, serif;
+    color: #53350c;
+    text-shadow: 1px 1px #f9c98d;
+    background-color: #f9c98d;
+}
+
 .flex-container {
     display: flex;
-    flex-direction:inherit;
+    flex-direction:row;
     justify-content: center;
+    flex-wrap: wrap;
+
 }
 
 .flex-container>div {
-    background-color: #f9c987;
+    background-color:#ffcd88;
     border: #000000;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 20px;
-    width: 500px;
+    width: 400px;
     font-size: 30px;
     margin: 30PX;
+    margin-top: 10px auto;
+    text-align: center;
+    box-shadow: 5px 1px 6px #5e4c34b9;
 }
 
 .produto{
-    background-color: #00000041;
-    margin-bottom: 0px;
-    width: 100%;
-    height: 100px;
-    border-radius: 20px;
+    text-align: center;
+    font-size: 25px;
+    color: #fffdf9;
+    text-shadow: 2px 1px #00000060;
+    background-color: #fff1dd;
+    border-radius: 10px;
 }
 
 .image {
     width: 90%;
-    border-radius: 20%;
+    border-radius: 10%;
 }
