--- a/css/contact.css
+++ b/css/contact.css
@@ -1,1 +1,46 @@
 @import url(/css/base.css);
+
+.container{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 20px;
+    margin: 40px;
+    
+}
+
+.content{
+    border-radius: 25px;
+    text-align: justify;
+    background-color: #FFFFFF;
+
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(107, 106, 106, 0.19);
+
+    width: 900px;
+    height: auto;
+}
+
+.content button{
+    width: 110px;
+
+    border-color: var(--color-tertiary);
+    color: var(--color-primary);
+    background-color: var(--color-tertiary);
+    margin: 20px ;
+}
+.content button:hover{
+    background-color: var(--color-primary);
+    border-color: var(--color-tertiary);
+
+}
+.content h1{
+    text-align: center;   
+}
+.content p{
+    margin: 20px;
+}
+.mapBox{
+    display: flex;
+    justify-content: center;
+    
+}
