--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,22 +1,26 @@
-.flex-container {
-    display: flex;
-    flex-wrap: wrap-reverse ;
-    background-color: #f1f1f1 ;
-  }
-  
-  .flex-container > div {
-    background-color: #f9c987;
-    width: 7000px;
-    margin: 10px;
-    text-align: center;
-    line-height: 30px;
-    font-size: 15px;
-    border-radius: 10px;
-  }
-
-
-
-.carousel-inner{
-  display: flex;
-  flex-direction: row;
-}
+@import url(/CSS/base.css);
+body {
+            background-color: #f8f9fa;
+        }
+        .header {
+            background-color: #451f0f;
+            color: white;
+            padding: 2rem 0;
+            text-align: center;
+        }
+        .section-title {
+            margin-top: 2rem;
+            margin-bottom: 1.5rem;
+            text-align: center;
+            color: #451f0f;
+        }
+        .card {
+            margin-bottom: 1.5rem;
+        }
+        .mission-section {
+            background-color: #451f0f;
+            padding: 2rem;
+        }
+        .mission-section h2 {
+            margin-bottom: 1.5rem;
+        }
