--- a/css/components/product.css
+++ b/css/components/product.css
@@ -1,13 +1,91 @@
 @import url('../base.css');
 
-h1 {
+
+.header {
+    background-image: url('/assets/images/logo.webp');
+
+    color: white;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    color: #53350c;
-    text-shadow: 1px 1px #f9c98d;
-    background-color: #ffe1ba;
-    margin-top: 30px;
-    width: 100vw;
+    padding: 6rem 2rem;
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
+}
+
+.header h1 {
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+.header p {
+    font-size: 1.2rem;
+}
+
+.section-title {
+    text-align: center;
+    font-size: 2.5rem;
+    color: #333;
+    margin: 2.5rem 0;
+    position: relative;
+}
+
+.section-title:after {
+    content: '';
+    width: 100px;
+    height: 4px;
+    background-color: #f9c987;
+    display: block;
+    margin: 0.5rem auto;
+    margin-bottom: 25px;
+}
+
+/* .history-section {
+    padding: 3rem 0;
+} */
+
+.history-section .card {
+    border: none;
+    background-color: #fefefe;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.mission-section .text-center {
+    color: #333;
+    margin-bottom: 30px;
+}
+
+.mission-section {
+
+    background-color: #dad0b9;
+    padding: 4rem 0;
+    color: #fff;
+}
+
+.mission-section h2 {
+    color: #fff;
+}
+
+.mission-section .card {
+    border: none;
+    background-color: #ede8dc;
+    color: #1f2421;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: justify;
+}
+
+.mission-section .card-title {
+    font-weight: bold;
+}
+
+.carousel{
+    width: 400px;
+
+}
+
+.carousel img{
+    height: 320px;
+}
+
+.history-section{
+    padding-bottom: 5px;
 }
 
 .flex-container {
@@ -15,14 +93,20 @@ h1 {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    background-color: #f9c987;
+    width: 1400px;
+    border-radius: 20px;
+    margin: 0px auto;
+    margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 .flex-container>div {
-    background-color: #6e6e6e09;
+    background-color: #ede8dc;
     border: #000000;
     border-radius: 10px;
     padding: 20px;
-    width: 400px;
+    max-width: 400px;
     font-size: 30px;
     margin: 30PX;
     margin-top: 10px auto;
@@ -34,14 +118,16 @@ h1 {
     text-align: center;
     font-size: 25px;
     color: #53350c;
-    text-shadow: 1px 1px #f9c98d;
-    background-color: #fff1dd;
-    margin-top: 10px;
+    /* text-shadow: 1px 1px #f9c98d; */
+    background-color: #fff1dd00;
+    box-shadow: 0px 0px 6px #3120077c;
+    margin-top: 15px;
+
     border-radius: 10px;
 }
 
-.image {
-    width: 90%;
+/* .image {
+    width: 10px;
     border-radius: 10%;
     box-shadow: 0px 0px 6px #3b241181;
-}
+} */
