--- a/components/css/header.css
+++ b/components/css/header.css
@@ -1,6 +1,6 @@
 #header {
-    width: 100vw;
-    height: clamp(10vh, 120px);
+    width: 100%;
+    height: 70px;
 
     display: flex;
     align-items: center;
@@ -16,14 +16,7 @@
 }
 
 #logo {
-    width: 80px;
-    border-radius: 50%;
-    transition: 0.3s ease;
-}
-
-#logo:hover {
-    scale: 1.1;
-    box-shadow: var(--box-shadow-light);
+    height: 60px;
 }
 
 #navigation-links {
