--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,13 @@
     --color-secondary: #451f0f;
     --color-tertiary: #f9c987;
 
+    --color-text: #5E3012;
+    --brown-light: #997C64;
+    --beige-light: #DECEB7;
+    --yellow-dark: #F0CA74;
+    --yellow-light: #FCCC8C;
+    --white: #FFFFFF;
+
     --box-shadow-light: 0 2px 5px rgba(0,0,0,0.1);
 }
 
@@ -17,4 +24,7 @@ html, body {
     padding: 0;
 
     background-color: var(--color-primary);
+    color: var(--color-text);
+
+    font-family: 'Arial', sans-serif;
 }
