--- a/components/css/header.css
+++ b/components/css/header.css
@@ -1,6 +1,7 @@
 #header {
     width: 100%;
     height: 70px;
+    z-index: 9999;
 
     display: flex;
     align-items: center;
@@ -23,18 +24,21 @@
     flex-grow: 1;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    justify-content: right;
 
     list-style-type: none;
     display: flex;
     gap: 20px;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 
 .navigation-link {
     text-decoration: none;
     color: var(--color-primary);
     font-weight: bold;
+    font-size: 1rem;
     transition: 0.3s ease;
 }
 
