--- a/components/html/header.html
+++ b/components/html/header.html
@@ -1,7 +1,7 @@
 <img id="logo" src="/assets/images/logo_rounded.png" alt="Logo - Granja Serra Dourada">
 
 <ul id="navigation-links">
-    <li><a class="navigation-link" href="/pages/index.html">Home</a></li>
+    <li><a class="navigation-link" href="/index.html">Home</a></li>
     <li><a class="navigation-link" href="/pages/about.html">Quem Somos</a></li>
     <li><a class="navigation-link" href="/pages/products.html">Produtos</a></li>
     <li><a class="navigation-link" href="/pages/contact.html">Contato</a></li>
