--- a/css/contact.css
+++ b/css/contact.css
@@ -1,9 +1,4 @@
 @import url(/css/base.css);
-body{
-    background-image: url(/assets/images/contact_background.png) ;
-    background-repeat: no-repeat;
-    
-}
 .container{
     display: flex;
     justify-content: center;
@@ -64,4 +59,53 @@ body{
     height: 600px;
     border: 0;
     border-radius: 25px;
+}
+
+@media screen and (min-width: 1760px) {
+    body{
+    background-image: url(/assets/images/contact_background.png) ;
+    background-repeat: no-repeat;
+    background-position: center;
+    }
+    
+}
+
+@media screen and (min-width: 1025px) {
+   #maps{
+    display: none;
+   }
+}
+
+@media screen and (max-width: 1024px){
+    body{
+        background-image: none;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+       
+    }
+
+    .content{
+        width: 100%;
+    }
+
+    #btn-loc{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 450px){
+    
+    .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    .content{
+        font-size: medium;
+    }
 }
