Organização dos arquivos nos lugares apropriados

--- a/components/html/header.html
+++ b/components/html/header.html
@@ -1,10 +1,8 @@
-<a href="https://maps.app.goo.gl/4zbQPdQ6HJqZ1Huh8" target="_blank">
-    <img id="logo" src="/assets/images/logo_rounded.png" alt="Logo - Granja Serra Dourada">
-</a>
+<img id="logo" src="/assets/images/logo_rounded.png" alt="Logo - Granja Serra Dourada">
 
 <ul id="navigation-links">
-    <li><a class="navigation-link" href="/pages/index.html">Home</a></li>
-    <li><a class="navigation-link" href="/pages/about.html">Quem Somos</a></li>
-    <li><a class="navigation-link" href="/pages/products.html">Produtos</a></li>
-    <li><a class="navigation-link" href="/pages/contact.html">Contato</a></li>
+    <li><a class="navigation-link" href="/index.html">Home</a></li>
+    <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
+    <li><a class="navigation-link" href="/products.html">Produtos</a></li>
+    <li><a class="navigation-link" href="/contact.html">Contato</a></li>
 </ul>
