--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,5 @@
-@import url(/CSS/base.css);
+@import url(/css/base.css);
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5;
