--- a/css/index.css
+++ b/css/index.css
@@ -10,19 +10,19 @@
     width: 100%;
 }
 
-/* Solutions */
-.solutions-section {
+/* Cards */
+.cards-section {
     text-align: center;
     margin-bottom: 40px;
 }
 
-.solutions-title {
+.cards-title {
     color: var(--color-text);
     margin-top: 20px;
     margin-bottom: 40px;
 }
 
-.solutions-title:after {
+.cards-title:after {
     content: '';
     width: 100px;
     height: 4px;
@@ -32,14 +32,14 @@
     margin-bottom: 25px;
 }
 
-.solutions-container {
+.cards-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
 
-.solution-card {
+.card {
     background-color: var(--accent-color);
     border: 2px solid var(--primary-color);
     border-radius: 15px;
@@ -50,24 +50,32 @@
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-.solution-card:hover {
+.card:hover {
     transform: translateY(-10px);
     background-color: var(--beige-light);
 }
 
-.solution-card h3 {
+.card h3 {
     color: var(--primary-color);
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
 
-.solution-card p {
+.card p {
     color: var(--secondary-color);
     font-size: 1rem;
 }
 
 /* Highlight */
-.solution-highlight {
+.highlights-container .highlight:nth-child(odd) {
+    background-color: var(--beige-light); 
+}
+
+.highlights-container .highlight:nth-child(even) {
+    background-color: var(--primary-color);
+}
+
+.highlight {
     width: 100%;
 
     display: flex;
@@ -81,31 +89,23 @@
     gap: 20px;
 }
 
-.highlights-container .solution-highlight:nth-child(odd) {
-    background-color: var(--beige-light); 
-}
-
-.highlights-container .solution-highlight:nth-child(even) {
-    background-color: var(--primary-color);
-}
-
-.solution-text {
+.highlight-text {
     max-width: 600px;
 }
 
-.solution-text h2 {
+.highlight-text h2 {
     color: var(--color-text);
     font-size: 2.5rem;
     margin-bottom: 20px;
 }
 
-.solution-text p {
+.highlight-text p {
     color: var(--brown-light);
     font-size: 1.2rem;
     margin-bottom: 20px;
 }
 
-.solution-button {
+.highlight-button {
     display: inline-block;
     padding: 10px 20px;
     background-color: var(--yellow-dark);
@@ -117,36 +117,36 @@
     transition: box-shadow 0.3s ease, background-color 0.3s ease;
 }
 
-.solution-button:hover {
+.highlight-button:hover {
     box-shadow: var(--box-shadow-light);
     background-color: var(--yellow-light);
 }
 
-.solution-image img {
+.highlight-image img {
     border-radius: 12px;
     max-width: 100%;
     height: auto;
 }
 
 @media (max-width: 768px) {
-    .solution-highlight {
+    .highlight {
         flex-direction: column;
         text-align: center;
         padding: 40px 10px; 
     }
 
-    .solution-image {
+    .highlight-image {
         margin-top: 20px;
     }
 }
 
 @media (max-width: 480px) {
-    .solution-text h2 {
-        font-size: 2rem; 
+    .highlight {
+        gap: 10px;
     }
 
-    .solution-highlight {
-        gap: 10px;
+    .highlight-text h2 {
+        font-size: 2rem; 
     }
 }
 
