Evitando erros futuros do navegador ao ler o simbolo do copyright

--- a/components/html/footer.html
+++ b/components/html/footer.html
@@ -30,4 +30,4 @@
     </li>
 </ul>
 
-<p id="copyright">&copy;2024 Granja Serra Dourada. Todos os direitos reservados.</p>
+<p id="copyright">&#169;2024 Granja Serra Dourada. Todos os direitos reservados.</p>
