--- a/components/html/header.html
+++ b/components/html/header.html
@@ -2,7 +2,7 @@
 
 <ul id="navigation-links">
     <li><a class="navigation-link" href="/index.html">Home</a></li>
-    <li><a class="navigation-link" href="/pages/about.html">Quem Somos</a></li>
-    <li><a class="navigation-link" href="/pages/products.html">Produtos</a></li>
-    <li><a class="navigation-link" href="/pages/contact.html">Contato</a></li>
+    <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
+    <li><a class="navigation-link" href="/products.html">Produtos</a></li>
+    <li><a class="navigation-link" href="/contact.html">Contato</a></li>
 </ul>
