Corrigido bug em que imagems altas ficavam achatadas em orietanção horizontal.

--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,12 @@
     }
 }
 
+@media (orientation: landscape) {
+    .highlight-image {
+        max-height: max-content;
+    }
+}
+
 /* Differentials */
 .differentials-section {
     width: 100%;
