Header: nav para indexação, nome da empresa, menu de navegação para telas menores

--- a/components/css/header.css
+++ b/components/css/header.css
@@ -5,6 +5,7 @@
 
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     top: 0;
     left: 0;
@@ -16,22 +17,97 @@
     background-color: var(--color-tertiary);
 }
 
+#identity {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
 #logo {
     height: 60px;
 }
 
-#navigation-links {
-    flex-grow: 1;
+#name {
+    font-size: lamp(1.25rem, 1.75vw, 1.5rem);
+    color: white;
+    margin: auto;
+}
+
+#menu {
+    display: none;
+    position: relative;
+    margin-left: auto;
+}
+
+#menu-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+#menu-icon {
+    width: 30px;
+    height: auto;
+}
+
+#menu-box {
+    position: absolute;
+    top: 100%; 
+    right: 0;
+    background-color: var(--color-tertiary);
+    border-radius: 5px;
+    box-shadow: var(--box-shadow-light);
+    opacity: 0; 
+    visibility: hidden; 
+    transition: opacity 0.5s ease, visibility 0.5s ease; 
+    z-index: 999;
+}
+
+#menu-box.show {
+    opacity: 1; 
+    visibility: visible; 
+}
+
+#navigation-links-mobile {
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    margin: 20px;
+}
+
+#navigation-links-mobile li {
+    list-style-type: none;
+    margin: 0; 
+    padding: 0; 
+}
+
+#navigation-links-mobile li a {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 0 auto;
+    transition: color 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+#navigation-links-mobile li:hover {
+    box-shadow: var(--box-shadow-light);
+    background-color: var(--yellow-light);
+}
+
+#navigation-links-mobile li a {
+    width: max-content;
+}
+
+#navigation-links-desktop {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    justify-content: right;
 
     list-style-type: none;
-    display: flex;
+    
     gap: 20px;
     margin: 0;
-    padding: 10px;
+    padding: 0;
 }
 
 .navigation-link {
@@ -40,8 +116,49 @@
     font-weight: bold;
     font-size: 1rem;
     transition: 0.3s ease;
+    display: inline-block;
+}
+
+.hidden {
+    animation: fadeOut 0.5s ease;
+}
+
+.show {
+    animation: fadeIn 0.5s ease;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
 }
 
 .navigation-link:hover {
     color: var(--color-secondary);
+}
+
+@media (max-width: 768px) {
+    #navigation-links-desktop {
+        display: none; 
+    }
+
+    #menu {
+        display: block; 
+    }
 }
