--- a/components/html/header.html
+++ b/components/html/header.html
@@ -1,8 +1,30 @@
-<img id="logo" src="/assets/images/logo_rounded.png" alt="Logo - Granja Serra Dourada">
+<div id="identity">
+    <img id="logo" src="/assets/images/logo_rounded.png" alt="Logo - Granja Serra Dourada">
+    <h2 id="name"><b>Granja Serra Dourada</b></h2>
+</div>
 
-<ul id="navigation-links">
-    <li><a class="navigation-link" href="/index.html">Home</a></li>
-    <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
-    <li><a class="navigation-link" href="/products.html">Produtos</a></li>
-    <li><a class="navigation-link" href="/contact.html">Contato</a></li>
-</ul>
+<div id="menu">
+    <button id="menu-toggle">
+        <img id="menu-icon" src="/assets/icons/menu-closed.png" alt="Menu">
+    </button>
+
+    <div id="menu-box" class="hidden">
+        <nav>
+            <ul id="navigation-links-mobile">
+                <li><a class="navigation-link" href="/index.html">Home</a></li>
+                <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
+                <li><a class="navigation-link" href="/products.html">Produtos</a></li>
+                <li><a class="navigation-link" href="/contact.html">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+
+<nav>
+    <ul id="navigation-links-desktop">
+        <li><a class="navigation-link" href="/index.html">Home</a></li>
+        <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
+        <li><a class="navigation-link" href="/products.html">Produtos</a></li>
+        <li><a class="navigation-link" href="/contact.html">Contato</a></li>
+    </ul>
+</nav>
