--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,19 @@
 @import url(/css/base.css);
 
+:root {
+    --brown-dark: #5E3012;
+    --brown-light: #997C64;
+    --beige-light: #DECEB7;
+    --yellow-dark: #F0CA74;
+    --yellow-light: #FCCC8C;
+
+    --box-shadow-light: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
+    --size-title: clamp(1.5rem, 2vw, 2.5rem);
+    --size-subtitle: clamp(1.25rem, 1.75vw, 1.5rem);
+    --size-text: clamp(1rem, 1.5vw, 1.25rem);
+}
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f5f5f5;
@@ -44,33 +58,73 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.mission-section .text-center{
-    color: #333;
-    margin-bottom: 30px;
-}
 .mission-section {
-    
+    width: 100%;
     background-color: #dad0b9;
-    padding: 4rem 0;
-    color: #fff;
+    padding: 30px;
+    text-align: center;
+    margin: 0 auto;
 }
-.mission-section h2 {
-    color: #fff;
+
+.mission-title {
+    font-size: 2rem;
+    color: var(--brown-dark);
+    font-family: 'Arial', sans-serif;
+    font-weight: bold;
+    margin-bottom: 40px;
 }
-.mission-section .card {
-    border: none;
-    background-color: #ede8dc;
-    color: #1f2421;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+.mission-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    align-items: stretch; 
+    justify-content: center;
     text-align: justify;
 }
-.mission-section .card-title {
-    font-weight: bold;
+
+.mission-item{
+    background-color: #ede8dc;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    flex: 1 1 250px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-between; 
+    transition: transform 0.3s ease;
 }
-footer {
-    background-color: #343a40;
-    color: #333;
-    text-align: center;
-    padding: 1.5rem 0;
+
+.mission-item:hover {
+    transform: scale(1.05);
+}
+
+.mission-item h3 {
+    color: var(--brown-dark);
+    font-size: 1.5rem;
+}
+
+.mission-item p {
+    color: var(--brown-light);
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+@media (max-width: 768px) {
+    .mission-section {
+        padding: 20px;
+    }
+
+    .mission-section h2 {
+        font-size: 1.8rem;
+    }
+
+    .mission-item h3 {
+        font-size: 1.3rem;
+    }
+
+    .mission-item p {
+        font-size: 0.9rem;
+    }
 }
 
