Adicionei a pagina cadastro usuario

--- a/components/html/header.html
+++ b/components/html/header.html
@@ -12,6 +12,7 @@
                 <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
                 <li><a class="navigation-link" href="/products.html">Produtos</a></li>
                 <li><a class="navigation-link" href="/contact.html">Contato</a></li>
+                <li><a class="navigation-link" href="/cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
     </div>
@@ -23,5 +24,6 @@
         <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
         <li><a class="navigation-link" href="/products.html">Produtos</a></li>
         <li><a class="navigation-link" href="/contact.html">Contato</a></li>
+        <li><a class="navigation-link" href="/cadastro.html">Cadastro</a></li>
     </ul>
 </nav>
