--- a/css/products.css
+++ b/css/products.css
@@ -81,9 +81,8 @@
     padding-bottom: 5px;
 }
 
-.image{
-    width: 350px;
-    height: 350px;
+.card-img-top{
+    max-width: auto;
     border-radius: 20px;
 }
 
@@ -112,11 +111,10 @@
     /* box-shadow: 0px 0px 6px #3120077c; */
 }
 
-.produto {
-    text-align: center;
+.card{
+    text-align: left;
     font-size: 20px;
-    color: #ffffff;
-    background-color: #ffffff00;
+    color: #1f0c05;
     /* box-shadow: 0px 0px 6px #3120077c; */
     margin-top: 15px;
     border-radius: 10px;
