--- a/components/html/header.html
+++ b/components/html/header.html
@@ -8,11 +8,11 @@
     <div id="menu-box" class="hidden">
         <nav>
             <ul id="navigation-links-mobile">
-                <li><a class="navigation-link" href="/index.html">Home</a></li>
-                <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
-                <li><a class="navigation-link" href="/products.html">Produtos</a></li>
-                <li><a class="navigation-link" href="/contact.html">Contato</a></li>
-                <li><a class="navigation-link" href="/cadastro.html">Cadastro</a></li>
+                <li><a class="navigation-link" href="/">Home</a></li>
+                <li><a class="navigation-link" href="/sobre">Quem Somos</a></li>
+                <li><a class="navigation-link" href="/produtos">Produtos</a></li>
+                <li><a class="navigation-link" href="/contato">Contato</a></li>
+                <li><a class="navigation-link" href="/login">Login</a></li>
             </ul>
         </nav>
     </div>
@@ -20,10 +20,10 @@
 
 <nav>
     <ul id="navigation-links-desktop">
-        <li><a class="navigation-link" href="/index.html">Home</a></li>
-        <li><a class="navigation-link" href="/about.html">Quem Somos</a></li>
-        <li><a class="navigation-link" href="/products.html">Produtos</a></li>
-        <li><a class="navigation-link" href="/contact.html">Contato</a></li>
-        <li><a class="navigation-link" href="/cadastro.html">Cadastro</a></li>
+        <li><a class="navigation-link" href="/">Home</a></li>
+        <li><a class="navigation-link" href="/sobre">Quem Somos</a></li>
+        <li><a class="navigation-link" href="/produtos">Produtos</a></li>
+        <li><a class="navigation-link" href="/contato">Contato</a></li>
+        <li><a class="navigation-link" href="/login">Login</a></li>
     </ul>
 </nav>
